# toy-ci

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  github_payload.json
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vue.config.js
dashboard/src/: App.vue
dashboard/src/components/: AppLink.vue
dashboard/src/components/ui/: NavLink.vue
dashboard/src/router/: index.ts
dashboard/src/views/: BuildOverview.vue  DashboardView.vue
merel-core/: Cargo.toml
merel-core/src/: container_method.rs  job.rs  lib.rs  pipeline.rs
merel-pipeline-parser/: Cargo.toml
merel-pipeline-parser/src/: error.rs  lib.rs  pipeline_parser.rs
src/: app_state.rs  build_context.rs  build_executor.rs  command.rs  error.rs  job.rs  lib.rs  main.rs  pipeline.rs  prelude.rs  running_build.rs  step.rs  workspace_context.rs
src/events/: actor.rs  build_message.rs  mod.rs  new_build_message.rs
src/git/: commit.rs  repository.rs
src/handlers/: build_sse_handler.rs  cancel_build_handler.rs  mod.rs  workspace_build_handler.rs
src/webhook_payloads/github/: github_commit.rs  github_repository.rs  github_user.rs  mod.rs  payload.rs
