[package]
name = "merel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
axum = "0.7.5"
dashmap = { version = "5.5.3", features = ["serde", "rayon"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v7", "v4"] }
